<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pullrupee_bc_img"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/login_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/current_investment"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:id="@+id/txt_curnt_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/current_value"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:id="@+id/txt_curnt_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/profit_loss"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/profit_loss_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/txt_profit_loss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_top"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size1"
                android:textStyle="bold" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/txt_profit_loss_in_prcnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/login_margin_top"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/edit_text_size1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/fund_transaction"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edit_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transprent_background_rectangle"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="@dimen/edit_text_pading_left"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/action"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/edit_text_size" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radio_deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/edit_text_size"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorWhite"
                        android:checked="true"
                        android:text="@string/desposit"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_withdraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorWhite"
                        android:checked="false"
                        android:text="@string/withdraw"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/edit_text_size" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    android:text="@string/amount"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/edit_text_size" />

                <EditText

                    android:id="@+id/amount_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/edit_text_size"
                    android:layout_weight="0.8"
                    android:background="@drawable/transprent_background_rectangle"
                    android:inputType="number"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:padding="@dimen/edit_text_size"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/edit_text_size" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/edit_text_size"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:text="@string/submit"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

